--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -6,3 +6,7 @@ qemu-system-riscv64 -machine virt -bios none -m 524M -smp 4 -nographic \
 -device virtio-blk-device,drive=x0,bus=virtio-mmio-bus.0 \
 -kernel 
 """
+
+# Required for rust-analyzer
+[build]
+target = "riscv64gc-unknown-none-elf"
